Fix copyright text spacing

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,19 +1,20 @@
+@use "../../styles/global/index" as g;
+
 .mainWrapper {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 .containerStyles {
-  // max-width: var(--max-width);
   max-width: 1200px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
-  padding: 48px 0px;
+  padding: 24px 0px;
   p {
-    padding: 8px 0px;
+    padding: 8px;
   }
 }
 .socialIcons {
@@ -39,5 +40,11 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: g.$tablet-bp) {
+  .containerStyles {
+    padding-bottom: 8px;
   }
 }
